--- a/android/res/menu/restomenu.xml
+++ b/android/res/menu/restomenu.xml
@@ -11,9 +11,8 @@
           android:showAsAction="ifRoom" />
     
     <item android:id="@+id/show_about"
-          android:icon="@android:drawable/ic_dialog_info"
+          android:icon="@drawable/ic_dialog_info"
           android:title="@string/resto_about"
           android:showAsAction="ifRoom" />
-    
     
 </menu>
