--- a/website/css/custom.css
+++ b/website/css/custom.css
@@ -62,7 +62,7 @@ html, body {
 }
 
 .content-block {
-    background-color: #FFFFFF;
+    background-color: #000000;
     background-color: rgba(0, 0, 0, 0.7);
     padding: 10px 40px 10px 20px;
 }
