--- a/android/res/layout/urgent.xml
+++ b/android/res/layout/urgent.xml
@@ -69,7 +69,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="4"
+        android:layout_weight="2"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:orientation="vertical">
@@ -110,6 +110,8 @@
                  
                 android:focusable="true"
                 android:focusableInTouchMode="true"
+            
+                android:gravity="center_horizontal"
             
                 android:ellipsize="marquee"
                 android:marqueeRepeatLimit="marquee_forever"
@@ -153,6 +155,8 @@
                 android:textAlignment="center"
                 android:paddingLeft="10dp"
                 
+                android:gravity="center_horizontal"
+                
                 android:focusable="true"
                 android:focusableInTouchMode="true"
             
@@ -163,6 +167,76 @@
                 android:scrollHorizontally="true"/>
         
         </LinearLayout>
+        
+    </LinearLayout>
+    
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="2"
+        
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        
+        android:gravity="center_vertical"
+        
+        android:orientation="horizontal">
+        
+        <ImageView
+            android:id="@+id/urgent_share_home"
+            
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            
+            android:src="@drawable/btn_urgent_home"
+            
+            android:layout_margin="5dp">
+        </ImageView>
+        <ImageView
+            android:id="@+id/urgent_share_facebook"
+            
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            
+            android:src="@drawable/btn_urgent_facebook"
+            
+            android:layout_margin="5dp">
+        </ImageView>
+        <ImageView
+            android:id="@+id/urgent_share_twitter"
+            
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            
+            android:src="@drawable/btn_urgent_twitter"
+            
+            android:layout_margin="5dp">
+        </ImageView>
+        <ImageView
+            android:id="@+id/urgent_share_soundcloud"
+            
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            
+            android:src="@drawable/btn_urgent_soundcloud"
+            
+            android:layout_margin="5dp">
+        </ImageView>
+        <ImageView
+            android:id="@+id/urgent_share_mail"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            
+            android:src="@drawable/btn_urgent_mail"
+        
+            android:layout_margin="5dp">
+        </ImageView>
+        
         
     </LinearLayout>
     
