Fixed theme of RestoMenu widget and padding issues.

--- a/android/res/layout/widget_restomenu.xml
+++ b/android/res/layout/widget_restomenu.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    		  xmlns:zeus="http://schemas.android.com/apk/res/be.ugent.zeus.hydra"
               android:orientation="vertical"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
@@ -13,6 +14,6 @@
         android:id="@+id/widget_image"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_centerInParent="true" />
+         />
 
 </RelativeLayout>
