--- a/WP/Hydra/Pages/MainPage.xaml
+++ b/WP/Hydra/Pages/MainPage.xaml
@@ -207,8 +207,8 @@
                     <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="{Binding Date}" VerticalAlignment="Top" Margin="10,10,0,0" Height="30" Width="360"/>
 
                     <Image HorizontalAlignment="Left" Height="60" Margin="10,50,0,0" VerticalAlignment="Top" Width="60" Source="/Assets/icon-meal@2x.png"/>
-                    <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Top" Margin="75,70,0,0" Height="26" Width="107" RenderTransformOrigin="1.449,0.154">
-    					<Run Text="Vlees"/>
+                    <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Top" Margin="75,70,0,0" Height="26" Width="152" RenderTransformOrigin="1.449,0.154">
+    					<Run Text="Vlees en Veggie"/>
     					<LineBreak/>
     					<Run/>
                     </TextBlock>
@@ -247,7 +247,7 @@
 
             <phone:PivotItem x:Name="urgent" Header="URGENT.fm" Margin="12,10,12,0">
                 <Grid>
-                    <Image HorizontalAlignment="Left" Height="689" VerticalAlignment="Top" Width="473" Margin="-17,-9,0,-77" Source="/Assets/urgent-bg@2x.jpg"/>
+                    <!--<Image HorizontalAlignment="Left" Height="689" VerticalAlignment="Top" Width="473" Margin="-17,-9,0,-77" Source="/Assets/urgent-bg@2x.jpg"/>-->
                     <Image HorizontalAlignment="Left" Height="264" Margin="82,123,0,0" VerticalAlignment="Top" Width="264" Source="/Assets/btn-urgent-bg-highlighted@2x.png"/>
                     <Image HorizontalAlignment="Left" x:Name="Play" Height="120" Margin="155,190,0,0" VerticalAlignment="Top" Width="120"/>
                     <TextBlock HorizontalAlignment="Left" Margin="22,385,0,0" TextWrapping="Wrap"  x:Name="NowPlayingTrack" VerticalAlignment="Top" Width="424" Height="81" Foreground="White" />
