--- a/WP/Hydra/Pages/SchamperItem.xaml
+++ b/WP/Hydra/Pages/SchamperItem.xaml
@@ -54,7 +54,7 @@
                 <Image HorizontalAlignment="Left" Height="119" VerticalAlignment="Top" Width="133" Margin="318,0,0,0" Source="/Assets/schamper-bg.png"/>
                 <Image HorizontalAlignment="Left" Height="119" VerticalAlignment="Top" Width="133" Margin="234,0,0,0" Source="/Assets/schamper-bg.png"/>
                 <TextBlock Name="title" Text="page name" TextWrapping="Wrap"  Margin="10,10,10,37" />
-                <TextBlock Name="author" HorizontalAlignment="Left" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Margin="10,82,0,0" Width="416"/>
+                <TextBlock Name="author" HorizontalAlignment="Left" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Margin="10,59,0,0" Width="416" Height="55"/>
             </Grid>
             <phone:WebBrowser Name="browser" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,134,0,0" Height="624" Width="436"/>
 
