Revamped urgent to look more like iOS
Resto now shows closed days as closed. Facebook ALMOST completely
working(need to find a way to log the user out). Schamper now uses the
native colors of the os(according to user theme)

--- a/WP/Hydra/App.xaml
+++ b/WP/Hydra/App.xaml
@@ -46,6 +46,7 @@
         <convert:ActivityToBooleanConverter x:Key="ActivityToBoolean" />
         <convert:StringToVisibilityConverter x:Key="StringToVisibilty" />
         <convert:StringToImageConverter x:Key="StringToImage"/>
+        <convert:BooleanToVisibilityConverter x:Key="booleanToVisibility" />
         
         <local:LocalizedStrings xmlns:local="clr-namespace:Hydra" x:Key="LocalizedStrings"/>
     </Application.Resources>
