--- a/WP/Hydra/Pages/ActivityItem.xaml
+++ b/WP/Hydra/Pages/ActivityItem.xaml
@@ -40,9 +40,9 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Grid Margin="0,0,0,10">
-            <Image x:Name="EventImage" Source="{Binding Image}" HorizontalAlignment="Left" Height="110" Margin="10,23,0,-11" VerticalAlignment="Top" Width="110"/>
-            <TextBlock x:Name="title" Margin="125,11,10,21" TextWrapping="Wrap" Style="{StaticResource PhoneTextLargeStyle}" Text="{Binding FullTitle}"/>
-            <TextBlock x:Name="associatie" Margin="125,106,260,-11" TextWrapping="Wrap" Text="{Binding Assocition.In}" />
+            <Image x:Name="EventImage" Source="{Binding Image}" HorizontalAlignment="Left" Height="110" Margin="360,11,0,0" VerticalAlignment="Top" Width="110"/>
+            <TextBlock x:Name="title" Margin="15,10,125,22" TextWrapping="Wrap" Style="{StaticResource PhoneTextLargeStyle}" Text="{Binding FullTitle}"/>
+            <TextBlock x:Name="associatie" Margin="15,85,370,10" TextWrapping="Wrap" Text="{Binding Assocition.In}" />
         </Grid>
 
         <Grid Margin="14,10,10,530" Grid.Row="1">
@@ -62,7 +62,7 @@
                     <TextBlock x:Name="descr" Text="{Binding Content}" TextWrapping="Wrap" HorizontalAlignment="Left" VerticalAlignment="Top"/>
                 </ScrollViewer>
             </Grid>
-            <Grid Margin="0,503,10,58">
+            <Grid Margin="0,503,10,58" Visibility="{Binding IsVisible}" >
                 <Button x:Name="attending" Content="Aanwezig" Click="ButtonsOnClick" HorizontalAlignment="Left"  VerticalAlignment="Top" Height="72" Width="150" IsEnabled="{Binding Path=.,Converter={StaticResource ActivityToBoolean},ConverterParameter=attending}" RenderTransformOrigin="0.267,0.528"/>
                 <Button x:Name="maybe" Content="Misschien"  Click="ButtonsOnClick" HorizontalAlignment="Left" VerticalAlignment="Top" Height="72" Width="150" RenderTransformOrigin="0.529,0.208" IsEnabled="{Binding Path=.,Converter={StaticResource ActivityToBoolean},ConverterParameter=unsure}" Margin="148,0,0,0"/>
                 <Button x:Name="declined" Content="Afwezig"  Click="ButtonsOnClick" HorizontalAlignment="Left" VerticalAlignment="Top" Width="138" IsEnabled="{Binding Path=.,Converter={StaticResource ActivityToBoolean},ConverterParameter=declined}" Margin="298,0,0,0"/>
