--- a/WP/Hydra/Pages/NewsItem.xaml
+++ b/WP/Hydra/Pages/NewsItem.xaml
@@ -59,7 +59,7 @@
                 <ColumnDefinition Width="31*"/>
                 <ColumnDefinition Width="26*"/>
             </Grid.ColumnDefinitions>
-            <phone:WebBrowser x:Name="browser" ScriptNotify="HandleLinks" HorizontalAlignment="Left" Margin="10,44,0,0" VerticalAlignment="Top" Height="633" Width="436" Grid.ColumnSpan="2"/>
+            <phone:WebBrowser x:Name="browser" IsScriptEnabled="True" ScriptNotify="HandleLinks" HorizontalAlignment="Left" Margin="10,44,0,0" VerticalAlignment="Top" Height="633" Width="436" Grid.ColumnSpan="2"/>
 
         </Grid>
     </Grid>
